; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_waitq.c_waitq_set_is_valid.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_waitq.c_waitq_set_is_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.waitq_set = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @waitq_set_is_valid(%struct.waitq_set* %0) #0 {
  %2 = alloca %struct.waitq_set*, align 8
  store %struct.waitq_set* %0, %struct.waitq_set** %2, align 8
  %3 = load %struct.waitq_set*, %struct.waitq_set** %2, align 8
  %4 = icmp ne %struct.waitq_set* %3, null
  br i1 %4, label %5, label %15

5:                                                ; preds = %1
  %6 = load %struct.waitq_set*, %struct.waitq_set** %2, align 8
  %7 = getelementptr inbounds %struct.waitq_set, %struct.waitq_set* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %5
  %12 = load %struct.waitq_set*, %struct.waitq_set** %2, align 8
  %13 = call i64 @waitqs_is_set(%struct.waitq_set* %12)
  %14 = icmp ne i64 %13, 0
  br label %15

15:                                               ; preds = %11, %5, %1
  %16 = phi i1 [ false, %5 ], [ false, %1 ], [ %14, %11 ]
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local i64 @waitqs_is_set(%struct.waitq_set*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
